overlays/prod/backend-deployment-patch.yml
# Deployment 패치
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: default
spec:
  replicas: 4  # Upper the number of replicas for production
  template:
    spec:
      containers:
        - name: demo-backend
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values: 
                - web-service #web-service node group에도 배포되어야 한다.
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values:
                - data-access
