overlays/prod/frontend-deployment-patch.yml
# Deployment 패치
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: default
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: demo-frontend
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values: 
                - web-service #web-service node group에s 배포되어야 한다.
