overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: "production.example.com"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: demo-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-frontend
            port:
              number: 3000
